[package]
name = "turing-screen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_yaml = "0.9"
rusttype = "0.9"
psutil = "3.3"
serialport = "4.3"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
simple_logger = "4.3"
clap = { version = "4.5", features = ["derive"] }
bevy_reflect = "0.13"
xxhash-rust = { version = "0.8.5", features = ["xxh3", "const_xxh3"] }

[profile.release]
codegen-units = 1
lto = "fat"
strip = true
panic = "abort"
