[package]
name = "turing-screen"
version = "0.1.0"
edition = "2021"
include = [
    "src/*.rs",
    "Cargo.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.3"
log = "0.4"
simple_logger = "4.3"
rgb = "0.8"

[profile.release]
codegen-units = 1
lto = "fat"
strip = true
panic = "abort"
